--- a/HW/HW2/report/mybib.bib
+++ b/HW/HW2/report/mybib.bib
@@ -24,3 +24,10 @@
   year={2010}, 
   month={Jan}
   }
+ @book{akenine2008real,
+  title={Real-time rendering},
+  author={Akenine-M{\"o}ller, Tomas and Haines, Eric and Hoffman, Naty},
+  year={2008},
+  edition={third},
+  publisher={CRC Press}
+}
