fix graphs, add more tests

--- a/HW/HW2/report/Char.tex
+++ b/HW/HW2/report/Char.tex
@@ -21,6 +21,7 @@
 \renewcommand{\ahmed}[1]{}
 }
 
+\newcommand{\wes}{{\fontfamily{qcr}\selectfont wesBench}}
 %=========================Doc====================================%
 \begin{document}
 \title{Characterization and Reverse-engineering Assignment - EEC 277}
