--- a/HW/HW2/report/part1.tex
+++ b/HW/HW2/report/part1.tex
@@ -1,7 +1,9 @@
 \section{Part A}
 %=========================Default Triangles====================================%
-\subsection{Rate Vs. Fill Rate:}
-The objective of first experiment is to find the crossover point for the unlit untexture triangles between the fill rate and geometry rate. This is done by testing both rates for different triangle sizes. The results are shown in Figure \ref{fig:fill_geo1}(a) on a log-log scale, where the fill rate (MFrags/Sec) increases as expected for small triangles and geometry rate (MVerts/Sec) decreases. The crossover point is between triangle area between 2 and 4 pixels. We notice that for triangle of size between 2 to 16 pixels the geometry rate is almost constant.  Even though the geometry rate is the highest but this could be due to more efficient use of caching. Since the triangles are of small size, and due to spatial locality, more triangle can be fetched and put into the cache. On the other side, the rapid change on the fill rate starts to slow down at triangle size greater than 16 pixels. This could be due to the fact the geometry stage is not sending enough work for the rasterization stage. So even the overall fill rate increases as the triangle size increases, but the slope of the line is not the same overall.
+\subsection{Geometry Rate Vs. Fill Rate:}
+The objective of first experiment is to find the crossover point for the unlit, untexture triangles between the fill rate and geometry rate in terms of triangle area in pixels.  This is done by testing both rates for different triangle sizes. The results are shown in Figure \ref{fig:fill_geo1}(a) on a log-log scale, where the fill rate (MFrags/Sec) increases as expected for small triangles and geometry rate (MVerts/Sec) decreases. The crossover point is between triangle area between $2^{10}$ and $2^{11}$ pixels. We notice that for triangle of size between $2^{1}$ to $2^{4}$ pixels the geometry rate is almost constant.  Even though the geometry rate is the highest but this could be due to more efficient use of caching. Since the triangles are of small size, and due to spatial locality, more triangle can be fetched and put into the cache. 
+
+On the other side, the rapid change on the fill rate starts to slow down at triangle size greater than $2^{4}$ pixels. This is noticable since the fill rate curve can be approximated by a quadratic function for upto triangle size of $2^{4}$. After that, the curve takes a linear trend which is slower than quadratic trend. This could be due to the fact that the geometry stage is not sending enough work to the rasterization stage. So even the overall fill rate increases as the triangle size increases, but the slope of the curve is not the same overall.
 
 \begin{figure}[!tbh]
  \centering  
@@ -9,33 +11,66 @@ The objective of first experiment is to find the crossover point for the unlit u
     {\includegraphics[width=0.49\linewidth]{fig/fill_geo.pdf}}   
  \subfloat[Lit Triangles]
    {\includegraphics[width=0.49\linewidth]{fig/fill_geo_lit.pdf}}
-  \caption{millions of vertices and millions of fragments}
+  \caption{Performance and crossover point of the default settings in \protect{\wes} (a) and the lit triangles Vs. the default (unlit) triangles (b) in millions of vertices per second and millions of fragments per second.}
    \label{fig:fill_geo1}
 \end{figure} 
 
 %========================= Lit Triangles ====================================%
 \subsection{Geometry Rate Vs. Fill Rate on Lit Triangles:}\label{sec:lit}
-The previous test was done on unlit, untexture triangles which was the default setting. Now we turn on the light on the triangles and do the same test and compare the results with the unlit triangles. The results are shown in Figure \ref{fig:fill_geo1}(b) where the crossover point is almost the same (between triangle size of 2 and 4 pixels). Additionally, we notice that the upper portion of the graph (towards triangle of size greater than 32 pixels) is identical i.e., the dotted and the solid lines overlaps for fill and geometry rates. For the lower part of the graph, it is understood that the geometry will decrease since the lighting is being processed at this stage and thus more work need to done for computing each vertex. This will directly affect the fill rate since less work is sent to the rasterization stage and thus a decline in absolute fill rate. As the triangles get bigger in size, less number of vertices need to be processed in the geometry stage. Thus, even though more work need to be done per vertex, we notice that the unlit triangle rate is almost identical to the lit triangles. Same thing applies for the fill rate; since the geometry stage now is able to send enough work for the rasterization stage, the fill rate is identical for both lit and unlit triangle. 
+The previous test was done on unlit, untexture triangles which is the default setting in \protect{\wes}. Now we turn on the light on the triangles and do the same test and compare the results with the unlit triangles. The results are shown in Figure \ref{fig:fill_geo1}(b) where the crossover point is almost the same (we only notice it moved a little closer to triangle of size $2^{11}$). Additionally, we notice that the upper portion of the graph (towards triangle of size greater than $2^{5}$ pixels) of the geometry rate curve is identical i.e., the dotted and the solid lines overlap. For the lower part of the graph, it is understood that the geometry rate should decrease since the lighting is being processed at this stage and thus more work need to done for computing each vertex, especially that more vertices are needed for such small triangles. This will directly affect the fill rate since less work is sent to the rasterization stage and thus a decline in absolute fill rate. As the triangle size increases, less number of vertices need to be processed in the geometry stage. Thus, even though more work need to be done per vertex (compared with unlit triangles), we notice that the lit triangle rate is almost identical to the unlit ones. In contrast, the behavior of fill rate curve is not consistent and we do not see a certain trend. For example, triangle of size $2^{12}$ and $ 2^{15}$ pixels have a higher fill rate with lit triangles than with unlit ones. While for triangle of size $2^{14}$ and $2^{16}$, it is the opposite. We would expect that for this upper portion to be identical with the unlit triangles, since the geometry stage is now able to send the same amount of work and there is no additional work required at the rasterization stage for lit triangles. Thus, We could not derive a conclusion for such behavior.
 
 \begin{figure}[!tbh]
  \centering  
  \subfloat[Textured Triangles]
     {\includegraphics[width=0.49\linewidth]{fig/fill_geo_tx.pdf}}   
- \subfloat[Lit Textured Triangles]
+ \subfloat[Lit, Textured Triangles]
    {\includegraphics[width=0.49\linewidth]{fig/fill_geo_lit_tx.pdf}}
-  \caption{millions of vertices and millions of fragments }
+  \caption{Performance of the textured triangle Vs. the default (untextured) triangles in \protect{\wes} (a) and lit, textured triangles Vs. the default (unlit, untextured) triangles (b) in millions of vertices per second and millions of fragments per second.}
    \label{fig:fill_geo2}
 \end{figure} 
 
 %=========================Textured Triangles ===================================%
-\subsection{Geometry Rate Vs. Fill Rate on Textured Triangles:}
-Now we turn on testing the textured triangles. Following the same methodology as in Section \ref{sec:lit}, we add textures to the triangles of size $1024\times1024$ and vary the triangle size and record the fill and geometry. We tested first with texture of smaller size ($128\times128$), but the graph we got was identical to the untextured one, so we discarded. We assume that this happened due to minimal workload required with small texture size. 
+\subsection{Geometry Rate Vs. Fill Rate on Textured Triangles:}\label{sec:tx}
+Now we turn on testing the textured triangles. Following the same methodology as in Section \ref{sec:lit}, we add textures of size $2^{7}\times2^{7}$ to the triangles and vary the triangle size and record the fill and geometry rates. We tested first with texture of smaller size ($2^{3}\times2^{3}$), but the graph we got was identical to the untextured one, so we discarded. We assume that this happened due to minimal workload required with small texture size. 
 
-Figure \ref{fig:fill_geo2}(a), compare the fill and geometry rate for textured and untextured triangles. The crossover point is almost the same. Having the same crossover point for the three different scenario tested so far suggests that the graphics card is optimized to have always such a crossover points. The graph also shows an decline in the performance in the textured triangles for both the geometry and fill rate. For the geometry stage, the decline in the number of vertices processed per second is due to the necessary transformation done per vertex (applying the \emph{projector function}\cite{akenine2008real}). The graph in Figure \ref{fig:fill_geo1}(b) and in \ref{fig:fill_geo2}(a) suggest that per-vertex-operation for the lighting is much cheaper for per-vertex-operation for texture which is indicated by the absolute value of geometry rate at certain triangle size. Additionally, the graph shows a divergence in the geometry rate between the textured and untextured. At first glance, this was surprising and we expected a similar behavior as in lit triangles. As the number of triangles decreased with size increases, then less number of vertices needed to be processed. However, we think that this divergence could be due to caching. Since we are using a relatively large texture ($1024\times1024$) and for a big triangles we would required fetching different parts of the texture image that may not be fetched all together into the cache (less spatial locality). 
+Figure \ref{fig:fill_geo2}(a), compare the fill and geometry rate for textured and untextured triangles. The crossover point has shifted to be between triangle of size $2^{12}$ and $2^{13}$ pixels. The graph also shows a decline in the performance in the textured triangles for both the geometry and fill rate. For the geometry stage, the decline in the number of vertices processed per second is due to the necessary transformation done per vertex (applying the \emph{projector function}\cite{akenine2008real}). The graph in Figure \ref{fig:fill_geo1}(b) and in Figure \ref{fig:fill_geo2}(a) suggest that per-vertex-operation for the lighting is similar to per-vertex-operation for texture which is indicated by the absolute value of geometry rate at a triangle size (for triangle size $\leq 2^{5}$ pixels). Additionally, the graph shows a divergence in the geometry rate between the textured and untextured curves. At first glance, this was surprising and we expected a similar behavior as in lit triangles (the curves overlap for large triangles). This stemmed from the fact that as the number of triangles decreased as the size increases, less number of vertices needed to be processed. However, we think that this divergence could be due to caching. Since we are using a relatively large texture ($2^{7}\times2^{7}$) and for a big triangles, it is required to fetch different parts of the texture image that may not be fetched all together into the cache (less spatial locality).
 
-For rasterization stage, the fill rate decline since the texture operation is more expensive on fragments. During the rasterization, the \emph{corresponder function} (matrix transformation) is applied per fragment and texture value per fragment is interpolated \cite{akenine2008real}. Both could be the reason for the decline in the fill rate. We notice the same divergence happens in fill rate. We assume this is because the geometry stage does not send enough work for the ratserization as the triangle size increase. 
+For rasterization, the fill rate decline since the texture operation is more expensive on fragments. During the rasterization, the \emph{corresponder function} (matrix transformation) is applied per fragment and texture value per fragment is interpolated \cite{akenine2008real}. Both could be the reason for the decline in the fill rate. We notice a similar divergence happens in fill rate. This is understandable since for large triangle more fragment are being processed per triangle (less parallelism can be extracted for big triangles).
 
 %========================= Lit Texture Triangles====================================%
 \subsection{Geometry Rate Vs. Fill Rate on Lit, Textured Triangles:}
-Here we use lit, textured triangles and compare the same performance metrics with the unlit, untextured triangles. Figure \ref{fig:fill_geo2}(b) shows that the crossover point did not change which confirm our hypothesis; that the graphics card is optimized for this value. For large triangles (size $\geq 32$) the lighting does not have any impact on both the geometry or the fill rates, then the decline in the performance is purely due to the texture processing. For smaller triangle size, both lighting and texturing contribute in declining
+Here we use lit, textured triangles and compare the same performance metrics with the unlit, untextured triangles. Figure \ref{fig:fill_geo2}(b) shows that the crossover point did not change from the texture triangle case (Section \ref{sec:tx}) which might indicate that the graphics card used is optimized for this value. For large triangles (size $\geq 2^{5}$) the lighting does not have real impact on both the geometry or the fill rates, then the decline in the performance is purely due to the texture processing. For smaller triangle size, both lighting and texturing contribute in the performance decrease.
+%========================= Strip Vs. Disjoing Triangles====================================%
+\subsection{Geometry Rate Vs. Fill Rate for Strips Vs. Disjoint Triangles:}
+OpenGL offers to represent a set of triangle in form of a list allowing more efficient memory usage. The list (strip) offers substantial reduction in number of vertices needed to be processed. Instead of storing each triangle by its three vertices, strip stores a list of vertices such that each three vertices compose a triangle. Disjoint triangle store a triangle by its three vertices, thus almost all vertices are duplicated by the number of triangles a vertex is a member in. 
 
+We use \protect{\wes} to measure the relative performance of the fill rate and geometry rate using these two types of triangle. The results is show in Figure \ref{fig:fill_geo3}(a). First we notice that the triangle rate of strip triangle is almost identical to the vertex rate. Meanwhile for disjoint triangle, the vertex rate is three time higher than the triangle rate (at certain triangle size). The reason behind that is the triangle strip length is equal to number of vertices plus two, thus we notice for very large triangle the two curves (triangle and vertex rate) diverge. 
+
+An interesting observation is the vertex rate for triangle size $\geq 2^{4}$ for triangle strip is so close to this of disjoint triangle. This gives disjoint triangle higher performance in terms of vertex rate since the vertex rate is three time higher than the triangle rate. For smaller triangle size, strip triangle has higher triangle rate, but still vertex rate of disjoint triangle outperforms. This is because the triangle rate should be three times higher to start overcome the disjoint triangles. For fill rate, triangle strips outperforms the disjoint triangles. We assume that this is because both can feed the rasterization stage equally (similar triangle rate), but triangle strip exhibits better temporal and spatial locality which gives it an edge over disjoint triangle. 
+
+
+%========================= Disjoing Vs. ID Disjoing Triangles==============================%
+\subsection{Geometry Rate Vs. Fill Rate for Indexed Disjoint Vs. Disjoint Triangles:}
+Here we try to evaluate the performance with two different type of triangles; disjoint and indexed disjoint triangles. With disjoint triangles, each triangle is specified by three vertices without reusing these vertices for a neighbor triangle. Indexed disjoint triangles reuse the vertices such that one vertex is shared among many triangles and thus no duplication is necessary. We will see later that the average number of triangles shared per vertex is approximately six triangles. 
+
+For indexed disjoint triangle, the total number of vertices is reduced by factor of three. Thus, we expect the geometry rate to be higher for the case of indexed disjoint triangles when compared with disjoint triangles. But actually this not the case as shown in Figure \ref{fig:fill_geo3}(b) where the disjoint triangles geometry rate outperforms the indexed variant. If we, instead, look at the triangle rate (MTris/Sex), we will find that the triangle rate is identical for triangle of size $\geq2^{5}$. This means if the geometry stage is processing $X$ triangles, then for the disjoint triangles case, $3\times X$ vertex should be processed. But for the indexed disjoint case, less number of vertices will be processed. For triangle size $\geq2^{5}$, by dividing the the geometry rate for the disjoint triangle by the geometry rate for indexed disjoint triangles and taking the normalized average, the result would be the number of triangles shared per vertex in the indexed disjoint triangles. Rounding the result, we found that it is 6 triangles per vertex. In conclusion, this indicates that the graphic card must been optimized to handle both cases efficiently by fixing the number of triangles being processed regardless to the vertex rate (which sounds a complicated task to achieve!)
+
+For fragment rate, since the geometry stage in both cases is able to send the same workload (in terms of triangle rate) for triangle of size $\geq 2^{5}$, we the fragment is almost identical for both cases with few wiggles that could be due to caching behavior in the disjoint case. Additionally, when the triangle rate increases for index disjoint triangles (triangle size $2^{1}-2^{5}$), we notice an equivalent improvement in fragment rate. The reason behind that is for such small triangles, the process is limited by geometry stage. If the geometry rate improves (able to send more work to rasterizer), then fill rate will improve too. 
+
+We conclude from this comparison that we should also investigate the triangle rate, along with the vertex rate and fill rate in order to fully characterize and understand the graphic card behavior.
+\begin{figure}[!tbh]
+ \centering  
+ \subfloat[Strips Vs. Disjoint]
+   {\includegraphics[width=0.49\linewidth]{fig/fill_geo_disj_tstrip.pdf}}
+ \subfloat[Indexed Disjoint Vs. Disjoint]
+    {\includegraphics[width=0.49\linewidth]{fig/fill_geo_disj_IDdisj.pdf}}    
+  \caption{Performance of the strips triangles Vs. disjoint triangles (a) and indexed disjoint triangles Vs. disjoint triangles (b) in millions of vertices per second, millions of triangle per second, and millions of fragments per second. }
+   \label{fig:fill_geo3}
+\end{figure} 
+
+
+%========================= Batch Size TStrip Triangles====================================%
+\subsection{Geometry Rate Vs. Fill Rate for Varying Batch Size:}
+
+%========================= Batch Size TStrip Triangles====================================%
+\subsection{Geometry Rate Vs. Fill Rate for Varying Texture Size:}
