--- a/HW/HW2/report/part1.tex
+++ b/HW/HW2/report/part1.tex
@@ -74,3 +74,14 @@ We conclude from this comparison that we should also investigate the triangle ra
 
 %========================= Batch Size TStrip Triangles====================================%
 \subsection{Geometry Rate Vs. Fill Rate for Varying Texture Size:}
+The final experiment was conduced to characterize the texture size and understand how it affects the performance. We used \protect{\wes} to vary the size of the texture image from $4\times4$ texels to $64\times64$ texels and recorded the vertex, fill, and triangles rates for two different triangle size as shown in Figure \ref{fig:fill_geo5}. We notice degradation in both the vertex rate and fill rate as the size of texture size increases. The decline in vertex rate (and triangle rate) is less dramatic than fill rate. For both vertex and fill rate, we assume the performance declines due to caching. For smaller texture size, the texture image can fit in the texture cache memory. Thus, the performance is limited by the operation itself. For larger texture size, the texture memory bandwidth is the bottleneck due to the repeated look-ups since the texture image could not be resident in the cache all the time. For fill rate, we would expect that the fill rate would remain constant for a range of texture size after which the fill rate would fall. Such a value would give an indication for the texture memory cache. But it looks like the cache is optimized (e.g. pre-fetching) such that the degradation in performance as the texture size increases is less dramatic. 
+
+\begin{figure}[!tbh]
+ \centering  
+ \subfloat[Triangle area = $2^{7}$ pixels]
+   {\includegraphics[width=0.49\linewidth]{fig/texture2_7.pdf}}
+ \subfloat[Triangle area = $2^{14}$ pixels]
+    {\includegraphics[width=0.49\linewidth]{fig/texture2_14.pdf}}    
+  \caption{Performance of varying the texture size while fixing the triangle are to $2^{7}$ pixels (a) and $2^{14}$ pixels (b) in millions of vertices per second, millions of triangle per second, and millions of fragments per second. }
+   \label{fig:fill_geo5}
+\end{figure} 
