--- a/HW/HW2/report/Char.tex
+++ b/HW/HW2/report/Char.tex
@@ -25,7 +25,7 @@
 %=========================Doc====================================%
 \begin{document}
 \title{Characterization and Reverse-engineering Assignment - EEC 277}
-\author{Ahmed H. Mahmoud and Mohamed Bana}
+\author{Ahmed H. Mahmoud and Mohamed El-Banna}
 \date{7 February 2017} 
 \maketitle
 
