adding Mohamed answers over wesbench implementation

--- a/HW/HW2/report/part2.tex
+++ b/HW/HW2/report/part2.tex
@@ -6,8 +6,12 @@ In this section, we start by quantifying the error of the basic arithmetic opera
 
 %=========================Arithmetic Opt====================================%
 \subsection{Arithmetic Operations Accuracy:}
-Here we test a range of basic arithmetic operation offered by OpenGL and GLSL. Take the CPU results as our datum and the absolute error between the GPU's results and CPU's results represents the errors. The rationale behind this method is that both CPU and GPU are compliant with IEEE 754 Standard. This is not absolutly true if we are conducted a series of computation. For example, performing dot product between two vectors could be more accurate on GPU than on CPU \cite{whitehead2011precision} since on the CPU we would have to do each multiply-add as two separate instruction while GPU is 
+Here we test a range of basic arithmetic operation offered by OpenGL and GLSL. Taking the CPU results as our datum, the absolute relative error between the GPU's results and CPU's results represents the GPU errors. The rationale behind this method is that both CPU and GPU are compliant with IEEE 754 Standard. We will revisit this idea in Section \ref{sec:dot}, where we see careful implementation could make the graphic card more accurate. 
 
+%=========================Dot Product====================================%
+\subsection{Dot Product}\label{sec:dot}
+Here we performance dot product between two float vectors and measure the error between the 
+\cite{whitehead2011precision}
 
 %=========================Rounding====================================%
 \subsection{Rounding}
