--- a/HW/HW2/report/Char.tex
+++ b/HW/HW2/report/Char.tex
@@ -15,7 +15,7 @@
 
 \newcommand{\final}{0}%Set to 1 to remove comments 
 
-\ifthenelse{\equal{\final}{1}}%make sure comments don't show when \final = 1
+\ifthenelse{\equal{\final}{0}}%make sure comments don't show when \final = 1
 {
 \renewcommand{\mohamed}[1]{}
 \renewcommand{\ahmed}[1]{}
@@ -31,12 +31,18 @@
 
 
 \input{intro}
+
+\newpage
+
 \input{part1}
 
 \newpage
 
 \input{part2}
 
+\newpage
+
+\input{app}
 
 %=========================Bib====================================%
 \bibliography{mybib}
