--- a/HW/HW2/report/Char.tex
+++ b/HW/HW2/report/Char.tex
@@ -15,7 +15,7 @@
 
 \newcommand{\final}{0}%Set to 1 to remove comments 
 
-\ifthenelse{\equal{\final}{0}}%make sure comments don't show when \final = 1
+\ifthenelse{\equal{\final}{1}}%make sure comments don't show when \final = 1
 {
 \renewcommand{\mohamed}[1]{}
 \renewcommand{\ahmed}[1]{}
@@ -46,6 +46,6 @@
 
 %=========================Bib====================================%
 \bibliography{mybib}
-\bibliographystyle{plain}
+\bibliographystyle{IEEEtran}
 
 \end{document}
