--- a/HW/HW2/report/mybib.bib
+++ b/HW/HW2/report/mybib.bib
@@ -37,3 +37,9 @@
   journal={NVIDIA Technical White Paper},  
   year={2011}
 }
+@article{stuart2013mobile,
+  title={Mobile {GPU} Floating Point Accuracy Variances},
+  author={Russell, Stuart},  
+  year={2013},  
+  url={http://www.youi.tv/mobile-gpu-floating-point-accuracy-variances/}
+}
