--- a/HW/HW2/report/part2.tex
+++ b/HW/HW2/report/part2.tex
@@ -6,14 +6,18 @@ In this section, we start by quantifying the error of the basic arithmetic opera
 
 %=========================Arithmetic Opt====================================%
 \subsection{Arithmetic Operations Accuracy:}
-Here we test a range of basic arithmetic operation offered by OpenGL and GLSL. Taking the CPU results as our datum, the absolute relative error between the GPU's results and CPU's results represents the GPU errors. The rationale behind this method is that both CPU and GPU are compliant with IEEE 754 Standard. We will revisit this idea in Section \ref{sec:dot}, where we see careful implementation could make the graphic card more accurate. 
+Here we test a range of basic arithmetic operation offered by OpenGL and GLSL. Taking the CPU results as our datum, the absolute relative error between the GPU's results and CPU's results represents the GPU errors. The rationale behind this method is that both CPU and GPU are compliant with IEEE 754 Standard. %We will revisit this idea in Section \ref{sec:dot}, where we see careful implementation could make the graphic card more accurate. 
 
 %=========================Dot Product====================================%
-\subsection{Dot Product}\label{sec:dot}
-Here we performance dot product between two float vectors and measure the error between the 
-\cite{whitehead2011precision}
+%\subsection{Dot Product}\label{sec:dot}
+%Here we performance dot product between two float vectors and measure the error between the 
+%\cite{whitehead2011precision}
 
 %=========================Rounding====================================%
+
+\cite{stuart2013mobile}
+
+
 \subsection{Rounding}
 
 
