first part of rounding

--- a/HW/HW2/report/Char.tex
+++ b/HW/HW2/report/Char.tex
@@ -5,6 +5,8 @@
 \usepackage{subfig}
 \usepackage[usenames]{color}
 \usepackage[]{todonotes}
+\usepackage{blindtext}
+\usepackage{listings}
 
 
 \newcommand{\ahmed}[1]{\todo[inline,color=blue!30]{\textbf{ahmed:} #1}}%set command to comment
